Fix form gap

--- a/src/components/add-project/form-control/FormControl.module.scss
+++ b/src/components/add-project/form-control/FormControl.module.scss
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   max-width: 600px;
-  row-gap: 1rem;
+  row-gap: 2rem;
 
   .actions {
     display: flex;
